# XDU-CS-lab

./: README.md  关于博客.md  项目管理作业.txt
C语言课程设计/作业/: 题1.c  题2.c  题3.c  题4.c
C语言课程设计/程序设计基础课程设计作业/: 流程图.pptx  王越洋-第1题报告.docx  王越洋-第2题报告.docx  王越洋-第3题报告.docx
English pre/: Pre翻译版.docx  README.md
OOP上机/第一次/: 上机实验报告1.docx  上机实验报告3.docx  实验1.1.cpp  实验1.2.cpp  实验1.3.cpp  实验1.4.cpp
OOP上机/第三次/: 1.cpp  2.cpp  3.cpp  4.cpp
OOP上机/第二次/: Account.cpp  Dog.cpp  People.cpp  Student.cpp  (+1 more)
OS课设（lh版）/: OS课程设计实验报告.doc
OS课设（lh）/: README.md
心流番茄钟/: app.json  project.config.json  project.private.config.json  项目复盘.docx
数据可视化/: README.md
数据库/: insert.sql  query.sql  数据库大作业.md
数据库大作业/: README.md  build.sql  《数据库系统》上机作业.ppt  上机作业要求.md  上机报告.md  学籍管理系统设计.docx
数电大作业-数字钟/: 2.改石英振荡器的数字时钟.ms14  README.md  多功能数字时钟（带闹钟）.ms10  数电大作业.docx  整点报时数字钟.ms14  整点报时数字钟.ms14 (Security copy)  整点报时数字钟报告.docx
星火杯/: README.md
暑期实践/: README.md
模电课设/: Circuitfinal.ms10  Circuitgsql.ms10  ceshi2.ms10  电子技术课设电路图.docx  电子课设总图.ms11  电路图.docx
生物信息学算法/: LigandReceptor_Human.txt  README.md  cancer_tcell_communication.py  main.py  requirements.txt  基于图论的肿瘤微环境中癌细胞-T细胞通讯网络分析.md  实验报告.md
电路基础大作业/: 互易定理的研究.ms14  叠加定理的研究.ms14  电路课程大作业 .docx  电路齐次性的研究.ms14  线性电路特性的研究.docx
离散数学/: 离散数学上机题要求-2023春.docx
算法实验/: README.md  binary.txt  multiway 3.txt  multiway 4.txt  实验三.docx
编译原理/: lex.yy.c  sql - 副本.l  sql - 副本.y  sql.c  sql.h  sql.l  sql.tab.c  sql.tab.h  sql.y  实验报告.md
网络应用程序设计/: README.md
网络应用程序设计/实验一/QT/ChatClient/: CMakeLists.txt  main.cpp  mainwindow.ui
网络应用程序设计/实验一/QT/untitled/: CMakeLists.txt
计组实验/: add  《计组实验》常见问题及解决方法.doc  《计组课设》常见问题及解决方法.doc  芯片引脚对照表.docx  计算机组织与体系结构课程设计讲义.docx
计网实验/: 实验报告标准封面 - 计网.doc
计网课程实验/: README  README.md
试卷&复习资料/: 12组_工程概论II大作业.docx  README.md  论十大关系.docx  铸梦红路：思想引领 组织创新.docx  高校之光，国家之望.docx
项目管理类大作业/: 项目计划书.docx
(+211 files in other folders)
